38 feat: Refactor de TrafficLight para correcta persistencia con mongo